# ContextGNN

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  install.sh  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: linting.yml  testing.yml
benchmark/: data_relbench.py  efficiency.py  ngcf_efficiency.py  relbench_link_prediction_benchmark.py  relbench_multi_vae.py  test_max_map.py  tgt_ijcai_benchmark.py
contextgnn/data/: __init__.py  ijcai_contest.py
contextgnn/nn/: __init__.py  rhs_embedding.py
contextgnn/nn/models/: __init__.py  contextgnn.py  graphsage.py  idgnn.py  rhsembeddinggnn.py  shallowrhsgnn.py
contextgnn/utils/: __init__.py  metrics.py  text_embedder.py
examples/: .relbench_example.py.swp  .wmf_example.py.swp  contextgnn_sample_softmax.py  gnn_link.py  ijcai_example.py  light_gcn.py  ngcf.py  relbench_example.py  sample_softmax.py  static_example.py  taobao_example.py  text_embedder.py  wmf_example.py
examples/baseline/: model.py  nn.py
hybridgnn/datasets/: __init__.py  ijcai_contest.py
hybridgnn/nn/: __init__.py  encoder.py  rhs_embedding.py
hybridgnn/nn/models/: RHSTransformer.py  __init__.py  graphsage.py  hybrid_rhstransformer.py  hybridgnn.py  idgnn.py  rerank_transformer.py  rhsembeddinggnn.py  shallowrhsgnn.py  transformer.py  wmf.py
hybridgnn/utils/: __init__.py  text_embedder.py
result/: rel-stack_user-post-comment_hybridgnn
results/: ijcai_contextgnn
scripts/: .subgraph.py.swp  analyze_graph.py  analyze_rhs.py  analyze_subgraph.py  create_distribution_graph.py  num.py  stats.csv  subgraph.py
test/nn/: test_encoder.py  test_model.py  test_rhs_embedding.py
